--- a/css/reg.css
+++ b/css/reg.css
@@ -11,13 +11,25 @@ body{
     font-family: cursive;
     border-radius: 1.25rem;
   }
+ @media only screen and (max-width: 400px) {
+    div{
+      margin: 2em 1em 5em 1em;
+    
+      padding: 3em 9em 3em 8em;
+      background: rgb(2,0,36);
+    background: linear-gradient(117deg, rgba(2,0,36,1) 0%, rgba(125,129,150,0.9757503221014968) 96%, rgba(222,199,45,1) 98%, rgba(222,199,45,1) 98%, rgba(142,49,242,0.5859143339953169) 98%);
+      color: #ffff;
+      font-family: cursive;
+      border-radius: 1.25rem;
+    }
+  }
   #container_1{
     text-align:center;
   }
   #container_2{
    display: block;
-  
-    
+   padding-left: 5%;
+    padding-right: 5%;
   }
   .form{
     width: 100%;
